--- a/module4/react/counter.html
+++ b/module4/react/counter.html
@@ -8,6 +8,24 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+<style>
+    button{
+        margin: 20px;
+        outline: none;
+        border: none;
+        background-color: red;
+        width: 50px;
+        height: 20px;
+        font-size: large;
+        color: white;
+    }
+    h1{
+        margin: 70px;
+    }
+</style>
+
+
 </head>
 <body>
     <div id = "root">
@@ -19,13 +37,30 @@
     class Counter extends React.Component{
         constructor(){
             super();
+            this.state = {
+                count:0,
+            };
+        }
+
+        increment = () =>{
+            this.setState({
+                count:this.state.count+1,
+            })
+        }
+
+        decrement = () =>{
+            this.setState({
+                count:this.state.count-1,
+            })
         }
         render(){
             return(
-                <h1>hello World</h1>
+                <div>
+                <h1>{this.state.count}</h1>
+                <button onClick = {this.increment}>+</button>
+                <button onClick = {this.decrement}>-</button>    
+                </div>
             )
-                
-            
         }
     }
     ReactDOM.render(<Counter/>,document.querySelector("#root"));
